<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FGTSActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etcSalarioBruto" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/salarioBruto" android:textSize="24sp" android:textAlignment="viewStart"/>
    <TextView
            android:text="@string/fechar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtZeraSalario"
            android:textSize="30sp" android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toEndOf="@+id/etcSalarioBruto" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etxMesesTrabalhos"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etxMesesTrabalhos" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etcSalarioBruto" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/mesesTrabalhados" android:textSize="24sp" android:textAlignment="viewStart"/>
    <TextView
            android:text="@string/fechar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtZerarMeses" app:layout_constraintStart_toEndOf="@+id/etxMesesTrabalhos"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/etxMesesTrabalhos"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtZeraSalario" android:textSize="30sp" android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"/>
    <Button
            android:text="@string/calcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalcular" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etxMesesTrabalhos" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/fonte"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnFonte" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCalcular" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultado" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnFonte" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="24sp"/>
</android.support.constraint.ConstraintLayout>